--- a/apps/global_entry/translations/src/en/pages.json
+++ b/apps/global_entry/translations/src/en/pages.json
@@ -2,7 +2,8 @@
   "first-page": {
     "header": "This page shows you how to use simple question types",
     "description": "The next pages will demonstrate more complex features",
-    "dob-question": "What is your date of birth?"
+    "dob-question": "What is your date of birth?",
+    "section": "Section 1 of 3"
   },
   "second-page": {
     "header": "This page demonstrates a field that toggles depending on the value of another field"
