--- a/apps/global_entry/translations/src/en/pages.json
+++ b/apps/global_entry/translations/src/en/pages.json
@@ -1,12 +1,11 @@
 {
   "first-page": {
-    "header": "This page shows you how to use simple question types",
-    "description": "The next pages will demonstrate more complex features",
-    "dob-question": "What is your date of birth?",
-    "section": "Section 1 of 3"
+    "header": "Are you a British citizen?",
+    "section": "1"
   },
   "second-page": {
-    "header": "This page demonstrates a field that toggles depending on the value of another field"
+    "header": "Passport number",
+    "section": "2"
   },
   "third-page": {
     "header": "This page shows how to make a field mandatory depending on the answer to a previous question"
