--- a/apps/global_entry/translations/src/en/pages.json
+++ b/apps/global_entry/translations/src/en/pages.json
@@ -8,25 +8,18 @@
     "section": "2"
   },
   "third-page": {
-    "header": "This page shows how to make a field mandatory depending on the answer to a previous question"
-  },
-  "fourth-page": {
-    "header": "This page demonstrates custom validation"
+    "header": "Full name",
+    "section": "3"
   },
   "confirm": {
     "table": {
       "headers": {
-        "example-dob": "Superhero date of birth",
-        "example-radio": "Example radio button",
-        "example-text": "Favourite colour",
-        "example-email": "Email",
-        "example-checkbox": "Example check box",
-        "yes-no-radio-toggler": "Radio toggler",
-        "example-toggled-text": "Example toggled text",
-        "yes-no-radio": "Yes no radio",
-        "example-depends-on-text": "Example depends on text",
-        "multiples-input": "Favourite multiple"
+        "british-citizen-radio": "Passport nationality",
+        "passport-number": "Passport number",
+        "alias-yes-no": "Full name",
+        "additional-alias": "Other names"
       }
-    }
+    },
+    "section": "Summary"
   }
 }
