--- a/apps/global_entry/translations/src/en/validation.json
+++ b/apps/global_entry/translations/src/en/validation.json
@@ -6,6 +6,12 @@
     "required": "Tell us your passport number",
     "numeric": "The length of the passport number should be 9 numeric characters"
   },
+  "passportExpiry": {
+    "required": "Tell us when your passport expires",
+    "numeric": "Please enter a valid date in the format: dd mm yyyy",
+    "past": "The date is in the past",
+    "format": "Please enter a valid date in the format: dd mm yyyy"
+  },
   "alias-yes-no": {
     "required": "Tell us if you’ve ever been officially or legally known by another name"
   },
