Fixed field label bug for passport number

--- a/apps/global_entry/translations/src/en/fields.json
+++ b/apps/global_entry/translations/src/en/fields.json
@@ -3,8 +3,7 @@
     "legend": "You can only register if it says ‘British citizen’ in the nationality section of your passport."
   },
   "passportNumber": {
-    "legend": "Enter passport number",
-    "label": "Enter passport number"
+    "label": "What is your passport number"
   },
   "passportExpiry": {
     "label": "Date",
