--- a/apps/global_entry/translations/src/en/pages.json
+++ b/apps/global_entry/translations/src/en/pages.json
@@ -16,6 +16,11 @@
     "header": "Full name",
     "section": "4"
   },
+  "fifth-page": {
+    "header": "DOB & gender",
+    "section": "5",
+    "dob-question": "What is your date of birth as it is written in your passport?"
+  },
   "confirm": {
     "table": {
       "headers": {
