--- a/apps/global_entry/translations/src/en/validation.json
+++ b/apps/global_entry/translations/src/en/validation.json
@@ -32,5 +32,14 @@
   },
   "additional-alias": {
     "required": "Tell us the name you used to be known by"
+  },
+  "dateOfBirth": {
+    "required": "Tell us your date of birth, as written on your passport",
+    "numeric": "Please enter a valid date in the format: dd mm yyyy",
+    "future": "The date is in the future",
+    "format": "Please enter a valid date in the format: dd mm yyyy"
+  },
+  "gender" : {
+    "required": "Tell us if your passport shows your gender as male or female"
   }
 }
