6th page - email added and translation files working

--- a/apps/global_entry/translations/src/en/pages.json
+++ b/apps/global_entry/translations/src/en/pages.json
@@ -21,6 +21,10 @@
     "section": "5",
     "dob-question": "What is your date of birth as it is written in your passport?"
   },
+  "sixth-page": {
+    "header": "Email",
+    "section": "6"
+  },
   "confirm": {
     "table": {
       "headers": {
